Created classes and attributes

--- a/MySugarTracker/Views/Home/Index.cshtml
+++ b/MySugarTracker/Views/Home/Index.cshtml
@@ -3,29 +3,27 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1>Welcome to MySugarTracker</h1>
+    <p class="lead">Use this application to directly enter your blood sugar test results, and monitor your values to help treat Diabetes, and send your results to your Doctor quickly and easily.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Daily Reminders</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            This application will remind you to take your blood sugar readings as recommended by your physician during the course of treatment for Diabetes. Then, just enter the values from your blood tests and the data is uploaded and sent to your physician! 
         </p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h2>View Your Personal Sugar History</h2>
+        <p>As you enter your sugar data over time, use the history function of this application to closely monitor your results and graph the data. </p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <h2>View Diabetes Feeds and News</h2>
+        <p>You can receive and view information about healthy diets for Diabetes, exercise tips and options, and the latest news and support from the Diabetes community!</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
