--- a/MySugarTracker/Views/Home/About.cshtml
+++ b/MySugarTracker/Views/Home/About.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "MySugarTracker: An application to streamline communication between Doctors and diabetic patients.";
 }
-<h2>@ViewBag.Title.</h2>
+@{
+    ViewBag.Message = "About the Designers of this Application";
+}
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>MySugarTracker: This application was designed and created by the Blue team: Mark Jensen, Raetoshia Hardy and Justin Langley.  MySugarTracker was created as the final project for the Grand Circus .NET coding boot camp, Spring 2015.</p>
