--- a/MySugarTracker/Views/Patients/Index.cshtml
+++ b/MySugarTracker/Views/Patients/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<MySugarTracker.Models.Patient>
-
-@{
-    ViewBag.Title = "Index";
+@model IEnumerable<MySugarTracker.Models.ApplicationUser>
+{
+    ViewBag.Title = "Patient Profile";
 }
 
-<h2>Index</h2>
+<h2>Patient Profile Information</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
