--- a/MySugarTracker/Views/Patients/Index.cshtml
+++ b/MySugarTracker/Views/Patients/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<MySugarTracker.Models.Patient>
-@model IEnumerable<MySugarTracker.Models.ApplicationUser>
-{
-    ViewBag.Title = "Patient Profile";
+﻿@model MySugarTracker.ViewModels.PatientUser
+
+
+@{
+    ViewBag.Title = "Index";
 }
 
 <h2>Patient Profile Information</h2>
@@ -33,7 +34,7 @@
             @Html.DisplayNameFor(model => model.EmailPref)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SMSpref)
+            @Html.DisplayNameFor(model => model.SMSPref)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.LowAlert)
@@ -62,62 +63,62 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@*@foreach (var item in Model) {*@
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.BirthDate)
+            @Html.DisplayFor(model => model.BirthDate)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.CardioVascularDisease)
+            @Html.DisplayFor(model => model.CardioVascularDisease)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.HighBloodPressure)
+            @Html.DisplayFor(model => model.HighBloodPressure)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ThyroidDisease)
+            @Html.DisplayFor(model => model.ThyroidDisease)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Female)
+            @Html.DisplayFor(model => model.Female)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Pregnant)
+            @Html.DisplayFor(model => model.Pregnant)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.EmailPref)
+            @Html.DisplayFor(model => model.EmailPref)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.SMSpref)
+            @Html.DisplayFor(model => model.SMSPref)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.LowAlert)
+            @Html.DisplayFor(model => model.LowAlert)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.HighAlert)
+            @Html.DisplayFor(model => model.HighAlert)
+        </td>
+        <td
+            @Html.DisplayFor(model => model.TestTime1)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.TestTime1)
+            @Html.DisplayFor(model => model.TestTime2)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.TestTime2)
+            @Html.DisplayFor(model => model.TestTime3)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.TestTime3)
+            @Html.DisplayFor(model => model.TestTime4)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.TestTime4)
+            @Html.DisplayFor(model => model.WeightInPounds)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.WeightInPounds)
+            @Html.DisplayFor(model => model.HeightInInches)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HeightInInches)
-        </td>
-        <td>
+        @*<td>
             @Html.ActionLink("Edit", "Edit", new { id=item.UserID }) |
             @Html.ActionLink("Details", "Details", new { id=item.UserID }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.UserID })
         </td>
-    </tr>
-}
+    </tr>*@
+
 
 </table>
