--- a/MySugarTracker/Views/Shared/_Layout.cshtml
+++ b/MySugarTracker/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Patients", "Index", "Patient")</li>
+                    <li>@Html.ActionLink("Patients", "Index", "Patients")</li>
                     <li>@Html.ActionLink("Doctors", "Index", "Doctor")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
