--- a/MySugarTracker/Views/PatientSugarDatas/Create.cshtml
+++ b/MySugarTracker/Views/PatientSugarDatas/Create.cshtml
@@ -11,17 +11,17 @@
 {
     @Html.AntiForgeryToken()
     
-    @*<div class="form-horizontal">
+    <div class="form-horizontal">
         <h4>PatientSugarData</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+        @*<div class="form-group">
+        @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.UserID, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
+        </div>
+    </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.patientSugarReading, htmlAttributes: new { @class = "control-label col-md-2" })
