Adding migrations and Adding Enter Glucose link

--- a/MySugarTracker/Views/Patients/Index.cshtml
+++ b/MySugarTracker/Views/Patients/Index.cshtml
@@ -8,11 +8,11 @@
 <h2>Patient Profile Information</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Enter Glucose Reading", "Create", "PatientSugarDatas")
 </p>
 
 
-<table>
+<table class="table table-bordered">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.FirstName)
