--- a/MySugarTracker/Views/Patients/Index.cshtml
+++ b/MySugarTracker/Views/Patients/Index.cshtml
@@ -123,7 +123,6 @@
         <th></th>
     </tr>
 
-@*@foreach (var item in Model) {*@
     <tr>
 
         <td>
@@ -155,12 +154,8 @@
             @Html.DisplayFor(model => model.TestTime4)
         </td>
 
-        @*<td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.UserID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.UserID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.UserID })
-        </td>
-    </tr>*@
 
 
 </table>
+<div style="width:90%; height:500px;">@(Model.MyChart)</div>
+
