Doctor patient list

--- a/MySugarTracker/Views/Doctor/Details.cshtml
+++ b/MySugarTracker/Views/Doctor/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model MySugarTracker.Models.ApplicationUser
+﻿@model MySugarTracker.ViewModels.DoctorPatient
 
 @{
     ViewBag.Title = "Details";
