--- a/MySugarTracker/Views/Doctor/Index.cshtml
+++ b/MySugarTracker/Views/Doctor/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿@model MySugarTracker.ViewModels.DoctorUser
 
+
+
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Doctor Profile Page";
 }
 
-<h2>Doctor Information</h2>
+<h2>Doctor Profile Information</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -40,6 +42,6 @@
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>*@
     </tr>
-}
+
 
 </table>
