Adding Links to Patient Index

--- a/MySugarTracker/Views/Patients/Index.cshtml
+++ b/MySugarTracker/Views/Patients/Index.cshtml
@@ -159,3 +159,22 @@
 </table>
 <div style="width:90%; height:500px;">@(Model.MyChart)</div>
 
+<div class="row">
+    <div class="col-md-4">
+        <h2>Diabetes Information</h2>
+        <p>
+            Learn more about Diabetes
+        </p>
+        <p><a class="btn btn-default" href="http://www.diabetes.org/">Diabetes Information &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Diabetes Support</h2>
+        <p>You are not alone join with others</p>
+        <p><a class="btn btn-default" href="http://www.defeatdiabetes.org/get-healthy/diabetes-support-groups/">Support &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Recipes</h2>
+        <p>Find healthy and delicious recipies</p>
+        <p><a class="btn btn-default" href="http://allrecipes.com/recipes/everyday-cooking/special-diets/diabetic/">Healthy Eating &raquo;</a></p>
+    </div>
+</div>
