--- a/MySugarTracker/Views/Patients/Index.cshtml
+++ b/MySugarTracker/Views/Patients/Index.cshtml
@@ -83,7 +83,7 @@
         <td>
             @Html.DisplayFor(model => model.Email)
         </td>
-        
+
     </tr>
 
 </table>
@@ -91,7 +91,7 @@
 <h2>Patient Medical History</h2>
 <table class="table">
     <tr>
-        
+
         <th>
             @Html.DisplayNameFor(model => model.CardioVascularDisease)
         </th>
@@ -100,7 +100,7 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.ThyroidDisease)
-        </th>       
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.LowAlert)
         </th>
@@ -141,8 +141,7 @@
         <td>
             @Html.DisplayFor(model => model.HighAlert)
         </td>
-        <td
-            @Html.DisplayFor(model => model.TestTime1)
+        <td @Html.DisplayFor(model => model.TestTime1)
         </td>
         <td>
             @Html.DisplayFor(model => model.TestTime2)
@@ -161,20 +160,18 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Diabetes Information</h2>
-        <p>
-            Learn more about Diabetes
-        </p>
-        <p><a class="btn btn-default" href="http://www.diabetes.org/">Diabetes Information &raquo;</a></p>
+        <h2>Diabetes Information</h2> 
+        
+        <p><a  href="http://www.diabetes.org/"><img width="210" src="http://upload.wikimedia.org/wikipedia/en/b/b6/American_Diabetes_Association_logo.jpg"/> </a></p>
     </div>
     <div class="col-md-4">
         <h2>Diabetes Support</h2>
-        <p>You are not alone join with others</p>
-        <p><a class="btn btn-default" href="http://www.defeatdiabetes.org/get-healthy/diabetes-support-groups/">Support &raquo;</a></p>
+       
+        <p><a class="btn btn-default" href="http://www.defeatdiabetes.org/get-healthy/diabetes-support-groups/"><img height="100" with="100" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROdagRlOTBYyOBIcKXw_jM1gfRnMoegE0nriwcXQZ__dJLmP9d"/></a></p>
     </div>
     <div class="col-md-4">
-        <h2>Recipes</h2>
-        <p>Find healthy and delicious recipies</p>
-        <p><a class="btn btn-default" href="http://allrecipes.com/recipes/everyday-cooking/special-diets/diabetic/">Healthy Eating &raquo;</a></p>
+        <h2>Healthy Recipes</h2>
+        
+        <p><a href="http://allrecipes.com/recipes/everyday-cooking/special-diets/diabetic/"><img height="100" width="200" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRDqaPfA5Se1u6-2LGcXC1p8HWFn3L5kA0oiwNW-BzF_AF94f9mP6u40KdA"/></a></p>
     </div>
 </div>
