--- a/MySugarTracker/Views/PatientSugarDatas/Edit.cshtml
+++ b/MySugarTracker/Views/PatientSugarDatas/Edit.cshtml
@@ -1,5 +1,7 @@
 ﻿@model MySugarTracker.Models.PatientSugarData
 
+@Styles.Render("~/dtpicker/css")
+
 @{
     ViewBag.Title = "Edit";
 }
@@ -16,14 +18,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.PatientSugarDataID)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @Html.HiddenFor(model => model.UserID)
 
         <div class="form-group">
             @Html.LabelFor(model => model.patientSugarReading, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -36,7 +31,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.dateTime, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.dateTime, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.dateTime, new { htmlAttributes = new { @class = "form-control", id = "dateTime" } })
                 @Html.ValidationMessageFor(model => model.dateTime, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -55,4 +50,8 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jquerydate")
+    <script>
+        jQuery('#dateTime').datetimepicker();
+    </script>
 }
