--- a/MySugarTracker/Views/Patients/Index.cshtml
+++ b/MySugarTracker/Views/Patients/Index.cshtml
@@ -66,10 +66,10 @@
             @Html.DisplayFor(model => model.HeightInInches)
         </td>
         <td>
-            @Html.DisplayFor(model => model.Female)
+            @Html.DisplayFor(model => model.Female.Value)
         </td>
         <td>
-            @Html.DisplayFor(model => model.Pregnant)
+            @Html.DisplayFor(model => model.Pregnant.Value)
         </td>
         <td>
             @Html.DisplayFor(model => model.EmailPref)
