Correcting first sugar reading

--- a/MySugarTracker/Views/Patients/Index.cshtml
+++ b/MySugarTracker/Views/Patients/Index.cshtml
@@ -141,7 +141,7 @@
         <td>
             @Html.DisplayFor(model => model.HighAlert)
         </td>
-        <td @Html.DisplayFor(model => model.TestTime1)
+        <td> @Html.DisplayFor(model => model.TestTime1)
         </td>
         <td>
             @Html.DisplayFor(model => model.TestTime2)
