Patient name displays as heading of Patient index

--- a/MySugarTracker/Views/Patients/Index.cshtml
+++ b/MySugarTracker/Views/Patients/Index.cshtml
@@ -5,7 +5,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Patient Profile Information</h2>
+
+    
+           <h2>@Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName) </h2> 
+
 
 <p>
     @Html.ActionLink("Enter Glucose Reading", "Create", "PatientSugarDatas")
