Current Patient name shows on Create PatientSugarDatas

--- a/MySugarTracker/Views/PatientSugarDatas/Create.cshtml
+++ b/MySugarTracker/Views/PatientSugarDatas/Create.cshtml
@@ -6,7 +6,9 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Ceate</h2>
+<h2>
+    @ViewBag.FirstName  @ViewBag.LastName
+</h2>
 
 
 @using (Html.BeginForm())
