--- a/MySugarTracker/Views/Patients/Edit.cshtml
+++ b/MySugarTracker/Views/Patients/Edit.cshtml
@@ -178,10 +178,10 @@
                 @Html.ValidationMessageFor(model => model.HeightInInches, "", new { @class = "text-danger" })
             </div>
         </div>
-
+       
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" href="../Patient/Edit"/>
             </div>
         </div>
     </div>
@@ -190,7 +190,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "/Doctor/Index")
+    @Html.ActionLink("Back to List", "../Doctor/Index")
 </div>
 
 @section Scripts {
