Doctor can edit patient information

--- a/MySugarTracker/Views/Doctor/Index.cshtml
+++ b/MySugarTracker/Views/Doctor/Index.cshtml
@@ -64,7 +64,7 @@
             </td>
             <td>
                 @*@Html.ActionLink("See Patient Record", (model => model.User))*@
-                <a href="/Patients/Edit/@Html.DisplayFor(model => item.User)">See Patient Record</a>
+                <a href="/Patients/Edit/@Html.DisplayFor(model => item.UserID)">See Patient Record</a>
             </td>
             
         </tr>
