--- a/MySugarTracker/Views/Doctor/Index.cshtml
+++ b/MySugarTracker/Views/Doctor/Index.cshtml
@@ -6,43 +6,10 @@
     ViewBag.Title = "Doctor Profile Page";
 }
 
-<h2>Doctor Profile Information</h2>
+
+<h2>@Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName) </h2> 
 
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th></th>
-    </tr>
-
-
-
-@*@foreach (var item in Model) {*@
-    <tr>
-        <td>
-            @Html.DisplayFor(model=> model.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(model=> model.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(model => model.Email)
-        </td>
-        @*<td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>*@
-    </tr>
-    </table>
 
     <table>
     <tr>
