--- a/MySugarTracker/Views/PatientSugarDatas/Edit.cshtml
+++ b/MySugarTracker/Views/PatientSugarDatas/Edit.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2 align="center">Modify Your Glucose Reading</h2>
 
 
 @using (Html.BeginForm())
@@ -14,7 +14,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>PatientSugarData</h4>
+        @*<h4>PatientSugarData</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.PatientSugarDataID)
