Got routing and links done

--- a/MySugarTracker/Views/PatientSugarDatas/Create.cshtml
+++ b/MySugarTracker/Views/PatientSugarDatas/Create.cshtml
@@ -48,7 +48,7 @@
 
 <div>
     @Html.ActionLink("Back to Glucose Reading History", "Index")
-    <div><p><a href="../Patients/Index">Back to Patient Profile &raquo;</a></p></div>
+    <div><p><a href="~/Views/Patients/">Back to Patient Profile &raquo;</a></p></div>
 </div>
 
 @section Scripts {
