--- a/MySugarTracker/Views/PatientSugarDatas/Edit.cshtml
+++ b/MySugarTracker/Views/PatientSugarDatas/Edit.cshtml
@@ -45,8 +45,9 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Glucose Reading History", "Index")
 </div>
+<div><p><a href="/Patients/Index">Back to Patient Profile &raquo;</a></p></div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
