--- a/MySugarTracker/Views/PatientSugarDatas/Delete.cshtml
+++ b/MySugarTracker/Views/PatientSugarDatas/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model MySugarTracker.Models.PatientSugarData
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete a Glucose Record";
 }
 
-<h2>Delete</h2>
+<h2 align="center">Delete a Glucose Reading</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>PatientSugarData</h4>
+    @*<h4>PatientSugarData</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -42,7 +42,9 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+
         </div>
+    @Html.ActionLink("Back to Glucose Reading History ", "Index")
+    <div><p><a href="/Patients/Index">Back to Patient Profile &raquo;</a></p></div>
     }
 </div>
