--- a/MySugarTracker/Views/PatientSugarDatas/Delete.cshtml
+++ b/MySugarTracker/Views/PatientSugarDatas/Delete.cshtml
@@ -11,13 +11,13 @@
     @*<h4>PatientSugarData</h4>*@
     <hr />
     <dl class="dl-horizontal">
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.UserID)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.UserID)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.patientSugarReading)
@@ -41,8 +41,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-
+            <input type="submit" value="Delete" class="btn btn-default" /> 
         </div>
     @Html.ActionLink("Back to Glucose Reading History ", "Index")
     <div><p><a href="/Patients/Index">Back to Patient Profile &raquo;</a></p></div>
