Removing external Login text

--- a/MySugarTracker/Views/Home/Index.cshtml
+++ b/MySugarTracker/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div  class="jumbotron">
     <h1>Welcome to MySugarTracker</h1>
     <p class="lead">Use this application to directly enter your blood sugar test results, and monitor your values to help treat Diabetes, and send your results to your Doctor quickly and easily.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a class="btn btn-default" href="/Account/Login">Please Login &raquo;</a></p>
 </div>
 
 <div class="row">
