Changes to dr/patient edit

--- a/MySugarTracker/Views/Patients/Edit.cshtml
+++ b/MySugarTracker/Views/Patients/Edit.cshtml
@@ -4,8 +4,9 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Patient Information and Glucose Chart</h2>
-
+<h2>Patient Information and Glucose Chart for @Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName)</h2>
+<hr />
+<div style="width:95%; height:500px;">@(Model.MyChart)</div>
 
 @using (Html.BeginForm())
 {
@@ -14,8 +15,8 @@
     
 
     <div class="form-horizontal">
-        <h4>Patient</h4>
-        <hr />
+        
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.UserID)
 
@@ -31,7 +32,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="checkbox">               
+                <div class="checkbox">
                     @Html.EditorFor(model => model.LastName)
                     @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
                 </div>
@@ -46,7 +47,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CardioVascularDisease, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="CardioVascularDisease">History of Cardiovascular Disease?</label>
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.CardioVascularDisease)
@@ -56,7 +57,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.HighBloodPressure, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="HighBloodPressure">History of High Blood Pressure?</label>
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.HighBloodPressure)
@@ -66,7 +67,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ThyroidDisease, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="ThyroidDisease">History of Thyroid Disease?</label>
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.ThyroidDisease)
@@ -76,14 +77,28 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Female, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="Female">Gender</label>
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.Female)
-                    @Html.ValidationMessageFor(model => model.Female, "", new { @class = "text-danger" })
+                    <select class="list-box tri-state" id="Female" name="Female">
+                        <option value="">Not Set</option>
+                        <option value="True">Female</option>
+                        <option value="False">Male</option>
+
+                        @{if (Model.Female == true)
+                          {<option selected="selected" value="True">Female</option>;
+                          }
+                          else
+                          {<option selected="selected" value="False">Male</option>;
+                          }
+}
+                    </select>
+                    <span class="field-validation-valid text-danger" data-valmsg-for="Female" data-valmsg-replace="true"></span>
                 </div>
             </div>
         </div>
+
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.Pregnant, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -181,17 +196,21 @@
        
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" href="../Patient/Edit"/>
+                <input type="submit" value="   Save Changes    " class="btn btn-default" href="../Patient/Edit"/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Return to Patient List" class="btn btn-default" href="../Doctor/Index" />
             </div>
         </div>
     </div>
 
-    <div style="width:90%; height:500px;">@(Model.MyChart)</div>
+    
 }
 
-<div>
-    @Html.ActionLink("Back to List", "../Doctor/Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
