--- a/MySugarTracker/Views/CaseManager/Index.cshtml
+++ b/MySugarTracker/Views/CaseManager/Index.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Case Manager Profile Page";
 }
 
-<h2>Case Manager Profile Information</h2>
+<h2 align="center">@Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName) </h2>
 
-<p>
+@*<p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
@@ -21,11 +21,11 @@
             @Html.DisplayNameFor(model => model.Email)
         </th>
         <th></th>
-    </tr>
+    </tr>*@
 
 
 
-    @*@foreach (var item in Model) {*@
+ @*@foreach (var item in Model) {
     <tr>
         <td>
             @Html.DisplayFor(model => model.FirstName)
@@ -36,13 +36,13 @@
         <td>
             @Html.DisplayFor(model => model.Email)
         </td>
-        @*<td>
+        <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id=item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-            </td>*@
+            </td>
     </tr>
-</table>
+</table>*@
 
 <table>
     <tr>
@@ -55,15 +55,17 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(model => item.FirstName)
+                <a href="/Patients/Edit/@Html.DisplayFor(model => item.UserID)">@item.FirstName</a>
             </td>
             <td>
-                @Html.DisplayFor(model => item.LastName)
+                <a href="/Patients/Edit/@Html.DisplayFor(model => item.UserID)">@item.LastName</a>
             </td>
             <td>
-                <a href="/Patients/Edit/@Html.DisplayFor(model => item.UserID)">See Patient Record</a>
+                <a href="/Patients/Edit/@Html.DisplayFor(model => item.UserID)">@item.PhoneNumber</a>
             </td>
-
+            <td>
+                <a href="/Patients/Edit/@Html.DisplayFor(model => item.UserID)">@item.Email</a>
+            </td>
         </tr>
     }
 </table>
