--- a/MySugarTracker/Views/Patients/Index.cshtml
+++ b/MySugarTracker/Views/Patients/Index.cshtml
@@ -29,7 +29,7 @@
             @Html.DisplayNameFor(model => model.HeightInInches)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Female)
+            Gender
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Pregnant)
@@ -53,7 +53,7 @@
             @Html.DisplayFor(model => model.HeightInInches)
         </td>
         <td>
-            @Html.DisplayFor(model => model.Female.Value)
+            @ViewBag.Gender
         </td>
         <td>
             @Html.DisplayFor(model => model.Pregnant.Value)
@@ -74,13 +74,13 @@
     <tr>
 
         <th>
-            @Html.DisplayNameFor(model => model.CardioVascularDisease)
+            History of CardioVascularDisease?
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.HighBloodPressure)
+            History of HighBloodPressure?
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ThyroidDisease)
+            History of ThyroidDisease?
         </th>
         <th>
             @Html.DisplayNameFor(model => model.LowAlert)
@@ -88,7 +88,7 @@
         <th>
             @Html.DisplayNameFor(model => model.HighAlert)
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.TestTime1)
         </th>
         <th>
@@ -99,7 +99,7 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.TestTime4)
-        </th>
+        </th>*@
 
     </tr>
 
@@ -121,7 +121,7 @@
         <td>
             @Html.DisplayFor(model => model.HighAlert)
         </td>
-        <td>
+        @*<td>
             @Html.DisplayFor(model => model.TestTime1)
         </td>
         <td>
@@ -132,7 +132,7 @@
         </td>
         <td>
             @Html.DisplayFor(model => model.TestTime4)
-        </td>
+        </td>*@
 
 </table>
 
